samples/_failures_safe/1761128358_700264_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58a23987.c: In function ‘main’:
./samples/SAFE/__tmp_58a23987.c:172:37: error: expected ‘)’ at end of input
  172 |     print_tokens(tokens, token_count
      |                 ~                   ^
      |                                     )
./samples/SAFE/__tmp_58a23987.c:172:5: error: expected declaration or statement at end of input
  172 |     print_tokens(tokens, token_count
      |     ^~~~~~~~~~~~
